Updated header layout add home nav link

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -28,6 +28,7 @@
   <i class="fa-solid fa-bars menu-icon" id="menu-toggle"></i>
   <nav>
     <ul class="navbar">
+      <li><a href="/index.html">Home</a></li>
       <li class="dropdown">
         Adventures
         <ul class="dropdown-menu">
