--- a/pages/achievements.html
+++ b/pages/achievements.html
@@ -36,6 +36,7 @@
         <i class="fa-solid fa-bars menu-icon" id="menu-toggle"></i>
         <nav>
           <ul class="navbar">
+            <li><a href="/index.html">Home</a></li>
             <li class="dropdown">
               Adventures
               <ul class="dropdown-menu">
@@ -58,8 +59,8 @@
                 </ul>
               </li>
            
-              <li><a href="pages/about.html">About Us</a></li>
-              <li><a href="pages/contact.html">Contact</a></li>
+              <li><a href="/pages/about.html">About Us</a></li>
+              <li><a href="/pages/contact.html">Contact</a></li>
           </ul>
         </nav>
       </header>
