--- a/pages/adventures.html
+++ b/pages/adventures.html
@@ -38,6 +38,7 @@
         <i class="fa-solid fa-bars menu-icon" id="menu-toggle"></i>
         <nav>
           <ul class="navbar">
+            <li><a href="/index.html">Home</a></li>
             <li class="dropdown">
               Adventures
               <ul class="dropdown-menu">
