--- a/pages/adventures.html
+++ b/pages/adventures.html
@@ -102,10 +102,11 @@
        </div> 
    
        <!-- Popup for Adventure Details -->
-       <div id="popup" class="popup">
-           <h3 id="popup-title"></h3>
-           <p id="popup-description"></p>
-       </div>
+       <div id="popup" style="position: absolute; display: none; background: white; border: 1px solid #ccc; padding: 10px; border-radius: 6px; box-shadow: 0 2px 8px rgba(0,0,0,0.2); z-index: 9999;">
+        <h4 id="popup-title" style="margin: 0 0 5px;"></h4>
+        <p id="popup-description" style="margin: 0;"></p>
+      </div>
+      
 
        <!-- route planner -->
   
