adventure page 1st map responsive fixed

--- a/pages/adventures.html
+++ b/pages/adventures.html
@@ -96,9 +96,9 @@
        <div class="map-container">
            <svg id="map" viewBox="0 0 800 500">
             <image href="../assets/images/map.jpg" width="990" height="500" /> 
-                Markers will be dynamically added here 
+                <!-- Markers will be dynamically added here  -->
 
-            </svg>
+            </svg>  
        </div> 
    
        <!-- Popup for Adventure Details -->
