menutoggle fixed all pages and map spacing fixed

--- a/pages/about.html
+++ b/pages/about.html
@@ -24,7 +24,10 @@
       <div id="autocomplete-list"></div>
       <button id="search-btn">Search</button>
     </div> -->
-    <i class="fa-solid fa-bars menu-icon" id="menu-toggle"></i>
+    <!-- <i class="fa-solid fa-bars menu-icon" id="menu-toggle"></i> -->
+    <button id="menu-toggle" class="menu-icon" aria-expanded="false">
+      <i class="fa-solid fa-bars"></i>
+    </button>
     <nav>
       <ul class="navbar">
         <li><a href="/index.html">Home</a></li>
