--- a/pages/adventures.html
+++ b/pages/adventures.html
@@ -115,7 +115,7 @@
         <p>Click on the map to add waypoints for your biking adventure. Your route will be saved.</p>
       
         <svg id="custom-map" viewBox="0 0 800 500">
-          <image href="../assets/images/map.jpg" x="0" y="0" width="800" height="500" />
+          <image href="../assets/images/map.jpg" x="0" y="0"   />
           <!-- Waypoints added by JavaScript -->
         </svg>
         <div id="popup-overlay" class="popup-overlay">
