--- a/pages/achievements.html
+++ b/pages/achievements.html
@@ -33,7 +33,13 @@
           <button id="search-btn">Search</button>
         </div> -->
       </div>
-        <i class="fa-solid fa-bars menu-icon" id="menu-toggle"></i>
+        <!-- <i class="fa-solid fa-bars menu-icon" id="menu-toggle"></i> -->
+        <button id="menu-toggle" class="menu-icon" aria-expanded="false">
+          <i class="fa-solid fa-bars"></i>
+        </button>
+       
+
+        
         <nav>
           <ul class="navbar">
             <li><a href="/index.html">Home</a></li>
